refactor(api)!: overhaul ProfitCalculatorRegistry and calculator selection
- Removed CalculatorEntry in favor of storing ProfitCalculator directly
- Replaced manual priority handling with weight-based selection
- Added best calculator/profit selection methods using weight and profit
- ProfitCalculator now requires getWeight() and getPlugin() methods
- Simplified registry methods and improved javadocs
- Implemented Comparable in ProfitCalculator for natural ordering

BREAKING CHANGE: Existing ProfitCalculator implementations must now
include getWeight() and getPlugin() methods. Registry API methods have
significantly changed - plugins using the registry require updates.