@@ -1,24 +1,26 @@
 package com.georgev22.voidchest.api.registry;
 
+import com.georgev22.voidchest.api.economy.profit.ProfitCalculator;
 import com.georgev22.voidchest.api.maps.HashObjectMap;
 import com.georgev22.voidchest.api.maps.ObjectMap;
-import com.georgev22.voidchest.api.economy.profit.ProfitCalculator;
+import com.georgev22.voidchest.api.storage.data.IVoidChest;
+import org.bukkit.inventory.ItemStack;
 import org.bukkit.plugin.Plugin;
-import org.jetbrains.annotations.ApiStatus;
 import org.jetbrains.annotations.NotNull;
 
-import java.util.ArrayList;
-import java.util.Comparator;
-import java.util.List;
+import java.math.BigDecimal;
+import java.math.BigInteger;
+import java.util.*;
 import java.util.stream.Collectors;
 
 /**
- * Singleton registry for managing ProfitCalculator instances by VoidChest name with priority.
+ * Registry for managing {@link ProfitCalculator} instances per VoidChest type and associated plugin.
+ * <p>
+ * Calculators are sorted by their weight, with lower weight having higher priority.
  */
-@ApiStatus.Experimental
 public class ProfitCalculatorRegistry {
 
-    private static final ObjectMap<String, List<CalculatorEntry>> calculatorMap = new HashObjectMap<>();
+    private static final ObjectMap<String, List<ProfitCalculator>> calculatorMap = new HashObjectMap<>();
 
     /**
      * Private constructor to prevent instantiation.
@@ -27,244 +29,228 @@ public class ProfitCalculatorRegistry {
     }
 
     /**
-     * Registers a single ProfitCalculator instance with priority to a VoidChest.
-     * If the priority already exists, assigns the next available priority.
+     * Registers a single {@link ProfitCalculator} for a given VoidChest type.
+     * Duplicate calculators per chest are not allowed.
      *
-     * @param voidChestName The name of the VoidChest.
-     * @param plugin        The plugin that is registering the calculator.
-     * @param calculator    The ProfitCalculator instance to register.
-     * @param priority      The priority of the ProfitCalculator instance.
-     * @throws IllegalArgumentException if the calculator is already registered to the VoidChest.
+     * @param voidchestType The type of the VoidChest.
+     * @param calculator    The calculator to register.
+     * @throws IllegalArgumentException if the calculator is already registered.
      */
-    public static void registerCalculator(String voidChestName, Plugin plugin, ProfitCalculator calculator, int priority) {
-        validateCalculator(voidChestName, calculator);
-        List<CalculatorEntry> calculatorEntries = getOrCreateCalculatorList(voidChestName);
-        if (priorityExists(calculatorEntries, priority)) {
-            priority = getNextAvailablePriority(calculatorEntries);
-        }
-        calculatorEntries.add(new CalculatorEntry(plugin, calculator, priority));
+    public static void registerCalculator(String voidchestType, ProfitCalculator calculator) {
+        validateCalculator(voidchestType, calculator);
+        getOrCreateCalculatorList(voidchestType).add(calculator);
     }
 
     /**
-     * Registers a list of ProfitCalculator instances with priorities.
-     * If the priority already exists for an entry, it will shift the existing priorities by 1.
+     * Registers a list of calculator entries to the given VoidChest type.
+     * Duplicate calculators are not allowed.
      *
-     * @param voidChestName The name of the VoidChest.
-     * @param calculators   The list of ProfitCalculator instances to register with their respective priorities.
+     * @param voidchestType The type of the VoidChest.
+     * @param calculators   The list of calculator entries to register.
+     * @throws IllegalArgumentException if any calculator is already registered.
      */
-    public static void registerCalculators(String voidChestName, @NotNull List<CalculatorEntry> calculators) {
-        List<CalculatorEntry> calculatorEntries = getOrCreateCalculatorList(voidChestName);
-        for (CalculatorEntry calculatorEntry : calculators) {
-            validateCalculator(voidChestName, calculatorEntry.calculator);
-            if (priorityExists(calculatorEntries, calculatorEntry.priority)) {
-                shiftPriorities(calculatorEntries, calculatorEntry.priority);
-            }
+    public static void registerCalculators(String voidchestType, @NotNull List<ProfitCalculator> calculators) {
+        List<ProfitCalculator> calculatorEntries = getOrCreateCalculatorList(voidchestType);
+        for (ProfitCalculator calculatorEntry : calculators) {
+            validateCalculator(voidchestType, calculatorEntry);
             calculatorEntries.add(calculatorEntry);
         }
     }
 
     /**
-     * Unregisters a single ProfitCalculator instance from a VoidChest.
+     * Unregisters a specific calculator from the given VoidChest type.
      *
-     * @param voidChestName The name of the VoidChest.
-     * @param calculator    The ProfitCalculator instance to unregister.
-     * @throws IllegalArgumentException if the calculator is not registered to the VoidChest.
+     * @param voidchestType The type of the VoidChest.
+     * @param calculator    The calculator to remove.
+     * @throws IllegalArgumentException if the calculator is not registered.
      */
-    public static void unregisterCalculator(String voidChestName, ProfitCalculator calculator) {
-        List<CalculatorEntry> calculators = calculatorMap.get(voidChestName);
-        if (calculators == null || calculators.stream().noneMatch(entry -> entry.calculator.equals(calculator))) {
-            throw new IllegalArgumentException("Calculator " + calculator.getClass().getSimpleName() + " is not registered to " + voidChestName + " VoidChest.");
+    public static void unregisterCalculator(String voidchestType, ProfitCalculator calculator) {
+        List<ProfitCalculator> entries = calculatorMap.get(voidchestType);
+        if (entries == null || entries.stream().noneMatch(e -> e.equals(calculator))) {
+            throw new IllegalArgumentException("Calculator " + calculator.getClass().getSimpleName() + " is not registered to " + voidchestType);
         }
-        calculators.removeIf(entry -> entry.calculator.equals(calculator));
+        entries.removeIf(e -> e.equals(calculator));
     }
 
     /**
-     * Checks if a calculator is already registered to a specific VoidChest.
+     * Checks if a calculator is already registered to a specific VoidChest type.
      *
-     * @param voidChestName The name of the VoidChest.
-     * @param calculator    The ProfitCalculator instance to check.
-     * @return true if the calculator is registered, false otherwise.
+     * @param voidchestType The type of the VoidChest.
+     * @param calculator    The calculator to check.
+     * @return {@code true} if already registered, otherwise {@code false}.
      */
-    public static boolean isCalculatorRegistered(String voidChestName, ProfitCalculator calculator) {
-        List<CalculatorEntry> calculators = calculatorMap.get(voidChestName);
-        return calculators != null && calculators.stream().anyMatch(entry -> entry.calculator.equals(calculator));
+    public static boolean isCalculatorRegistered(String voidchestType, ProfitCalculator calculator) {
+        List<ProfitCalculator> entries = calculatorMap.get(voidchestType);
+        return entries != null && entries.stream().anyMatch(e -> e.equals(calculator));
     }
 
     /**
-     * Retrieves all registered ProfitCalculator instances sorted by priority.
+     * Retrieves all registered {@link ProfitCalculator} instances sorted by weight across all VoidChest types.
      *
-     * @return A list of all registered ProfitCalculator instances, sorted by priority.
+     * @return A sorted list of all calculators.
      */
     public static List<ProfitCalculator> getAllCalculators() {
         return calculatorMap.values().stream()
                 .flatMap(List::stream)
-                .sorted(Comparator.comparingInt(entry -> entry.priority))
-                .map(entry -> entry.calculator)
-                .toList();
+                .map(e -> e)
+                .sorted(Comparator.comparingInt(ProfitCalculator::getWeight))
+                .collect(Collectors.toList());
     }
 
     /**
-     * Retrieves all registered ProfitCalculator instances for a specific VoidChest, sorted by priority.
+     * Retrieves all calculators registered to the specified VoidChest type, sorted by weight.
      *
-     * @param voidChestName The name of the VoidChest.
-     * @return A list of ProfitCalculator instances registered to the VoidChest, sorted by priority.
+     * @param voidchestType The type of the VoidChest.
+     * @return A sorted list of calculators.
      */
-    public static List<ProfitCalculator> getCalculators(String voidChestName) {
-        return getOrCreateCalculatorList(voidChestName).stream()
-                .sorted(Comparator.comparingInt(entry -> entry.priority))
-                .map(entry -> entry.calculator)
-                .toList();
+    public static List<ProfitCalculator> getCalculators(String voidchestType) {
+        return getOrCreateCalculatorList(voidchestType).stream()
+                .map(e -> e)
+                .sorted(Comparator.comparingInt(ProfitCalculator::getWeight))
+                .collect(Collectors.toList());
     }
 
     /**
-     * Retrieves all ProfitCalculator instances associated with a specific plugin, sorted by priority.
+     * Retrieves all calculators registered by the specified plugin across all VoidChest types, sorted by weight.
      *
-     * @param plugin The plugin to filter calculators by.
-     * @return A list of ProfitCalculator instances associated with the plugin, sorted by priority.
+     * @param plugin The plugin to filter by.
+     * @return A sorted list of calculators.
      */
     public static List<ProfitCalculator> getCalculatorsByPlugin(Plugin plugin) {
         return calculatorMap.values().stream()
                 .flatMap(List::stream)
-                .filter(entry -> entry.plugin.equals(plugin))
-                .sorted(Comparator.comparingInt(entry -> entry.priority))
-                .map(entry -> entry.calculator)
+                .filter(e -> e.getPlugin().equals(plugin))
+                .sorted(Comparator.comparingInt(ProfitCalculator::getWeight))
                 .collect(Collectors.toList());
     }
 
     /**
-     * Retrieves all ProfitCalculator instances for a specific VoidChest and associated with a specific plugin.
+     * Retrieves all calculators registered by a plugin for a specific VoidChest type, sorted by weight.
      *
-     * @param voidChestName The name of the VoidChest.
-     * @param plugin        The plugin to filter calculators by.
-     * @return A list of ProfitCalculator instances registered to the VoidChest and associated with the plugin.
+     * @param voidchestType The type of the VoidChest.
+     * @param plugin        The plugin to filter by.
+     * @return A sorted list of calculators.
      */
-    public static List<ProfitCalculator> getCalculatorsByPlugin(String voidChestName, Plugin plugin) {
-        return getOrCreateCalculatorList(voidChestName).stream()
-                .filter(entry -> entry.plugin.equals(plugin))
-                .sorted(Comparator.comparingInt(entry -> entry.priority))
-                .map(entry -> entry.calculator)
-                .toList();
+    public static List<ProfitCalculator> getCalculatorsByPlugin(String voidchestType, Plugin plugin) {
+        return getOrCreateCalculatorList(voidchestType).stream()
+                .filter(e -> e.getPlugin().equals(plugin))
+                .sorted(Comparator.comparingInt(ProfitCalculator::getWeight))
+                .collect(Collectors.toList());
     }
 
-
     /**
-     * Retrieves all CalculatorEntry instances associated with a specific plugin, sorted by priority.
+     * Retrieves all calculator entries for a given plugin across all VoidChest types.
      *
-     * @param plugin The plugin to filter entries by.
-     * @return A list of CalculatorEntry instances associated with the plugin, sorted by priority.
+     * @param plugin The plugin to filter by.
+     * @return A list of calculator entries.
      */
-    public static List<CalculatorEntry> getCalculatorEntriesByPlugin(Plugin plugin) {
+    public static List<ProfitCalculator> getCalculatorEntriesByPlugin(Plugin plugin) {
         return calculatorMap.values().stream()
                 .flatMap(List::stream)
-                .filter(entry -> entry.plugin.equals(plugin))
-                .sorted(Comparator.comparingInt(entry -> entry.priority))
+                .filter(e -> e.getPlugin().equals(plugin))
                 .collect(Collectors.toList());
     }
 
     /**
-     * Retrieves all CalculatorEntry instances for a specific VoidChest, sorted by priority.
+     * Retrieves all calculator entries for a specific VoidChest.
      *
-     * @param voidChestName The name of the VoidChest.
-     * @return A list of CalculatorEntry instances registered to the VoidChest, sorted by priority.
+     * @param voidchestType The type of the VoidChest.
+     * @return A list of calculator entries.
      */
-    public static List<CalculatorEntry> getCalculatorEntries(String voidChestName) {
-        return getOrCreateCalculatorList(voidChestName).stream()
-                .sorted(Comparator.comparingInt(entry -> entry.priority))
-                .collect(Collectors.toList());
+    public static List<ProfitCalculator> getCalculatorEntries(String voidchestType) {
+        return new ArrayList<>(getOrCreateCalculatorList(voidchestType));
     }
 
     /**
-     * Retrieves all CalculatorEntry instances for a specific VoidChest and associated with a specific plugin.
+     * Retrieves all calculator entries for a plugin and VoidChest type.
      *
-     * @param voidChestName The name of the VoidChest.
-     * @param plugin        The plugin to filter entries by.
-     * @return A list of CalculatorEntry instances registered to the VoidChest and associated with the plugin.
+     * @param voidchestType The type of the VoidChest.
+     * @param plugin        The plugin to filter by.
+     * @return A list of calculator entries.
      */
-    public static List<CalculatorEntry> getCalculatorEntriesByPlugin(String voidChestName, Plugin plugin) {
-        return getOrCreateCalculatorList(voidChestName).stream()
-                .filter(entry -> entry.plugin.equals(plugin))
-                .sorted(Comparator.comparingInt(entry -> entry.priority))
+    public static List<ProfitCalculator> getCalculatorEntriesByPlugin(String voidchestType, Plugin plugin) {
+        return getOrCreateCalculatorList(voidchestType).stream()
+                .filter(e -> e.getPlugin().equals(plugin))
                 .collect(Collectors.toList());
     }
 
-    private static List<CalculatorEntry> getOrCreateCalculatorList(String voidChestName) {
-        return calculatorMap.computeIfAbsent(voidChestName, k -> new ArrayList<>());
-    }
-
-    private static void validateCalculator(String voidChestName, ProfitCalculator calculator) {
-        if (isCalculatorRegistered(voidChestName, calculator)) {
-            throw new IllegalArgumentException("Calculator " + calculator.getClass().getSimpleName() + " is already registered to " + voidChestName + " VoidChest.");
+    /**
+     * Finds the best calculator for the given VoidChest based on weight and profit.
+     * <p>
+     * Lower weight is prioritized. If multiple calculators share the lowest weight,
+     * the one that returns the highest profit will be used.
+     *
+     * @param voidChest     The VoidChest to calculate profit for.
+     * @param input         The input item to calculate profit for.
+     * @return The selected calculator, or {@code Optional.empty()} if none apply.
+     */
+    public static Optional<ProfitCalculator> selectBestCalculator(@NotNull IVoidChest voidChest, ItemStack input, BigInteger itemAmount) {
+        List<ProfitCalculator> calculators = getCalculators(voidChest.type());
+        if (calculators.isEmpty()) {
+            return Optional.empty();
         }
-    }
 
-    private static boolean priorityExists(@NotNull List<CalculatorEntry> calculatorEntries, int priority) {
-        return calculatorEntries.stream().anyMatch(entry -> entry.priority == priority);
-    }
+        Map<Integer, List<ProfitCalculator>> grouped = calculators.stream()
+                .collect(Collectors.groupingBy(ProfitCalculator::getWeight));
 
-    private static int getNextAvailablePriority(@NotNull List<CalculatorEntry> calculatorEntries) {
-        return calculatorEntries.stream().max(Comparator.comparingInt(entry -> entry.priority))
-                .map(entry -> entry.priority + 1).orElse(0);
-    }
+        int lowestWeight = grouped.keySet().stream()
+                .min(Integer::compareTo)
+                .orElse(0);
 
-    private static void shiftPriorities(@NotNull List<CalculatorEntry> calculatorEntries, int startingPriority) {
-        calculatorEntries.stream()
-                .filter(entry -> entry.priority >= startingPriority)
-                .forEach(entry -> entry.priority += 1);
+        List<ProfitCalculator> candidates = grouped.get(lowestWeight);
+        if (candidates == null || candidates.isEmpty()) {
+            return Optional.empty();
+        }
+
+        return candidates.stream()
+                .map(calculator -> Map.entry(calculator, calculator.getProfit(voidChest, input, itemAmount)))
+                .filter(entry -> entry.getValue() != null && entry.getValue().compareTo(BigDecimal.ZERO) > 0)
+                .max(Map.Entry.comparingByValue())
+                .map(Map.Entry::getKey);
     }
 
     /**
-     * A helper class to store calculator, its priority, and the associated plugin.
+     * Calculates the best profit for the given VoidChest based on calculator weight and profit value.
+     * <p>
+     * Lower weight is prioritized. If multiple calculators share the lowest weight,
+     * the one that returns the highest profit will be used.
+     *
+     * @param voidChest   The VoidChest to calculate profit for.
+     * @param input       The input item to calculate profit for.
+     * @param itemAmount  The number of items being evaluated.
+     * @return The best profit, or {@code Optional.empty()} if no calculator applies or yields profit.
      */
-    public static class CalculatorEntry {
-        private final Plugin plugin;
-        private final ProfitCalculator calculator;
-        private int priority;
-
-        /**
-         * Constructs a new CalculatorEntry with the given calculator and priority.
-         *
-         * @param plugin     The plugin that registered the calculator.
-         * @param calculator The ProfitCalculator instance associated with the current instance.
-         * @param priority   The priority value of the current instance. The interpretation of this value is context-dependent.
-         */
-        public CalculatorEntry(Plugin plugin, ProfitCalculator calculator, int priority) {
-            this.plugin = plugin;
-            this.calculator = calculator;
-            this.priority = priority;
+    public static Optional<BigDecimal> selectBestProfit(@NotNull IVoidChest voidChest, ItemStack input, BigInteger itemAmount) {
+        List<ProfitCalculator> calculators = getCalculators(voidChest.type());
+        if (calculators.isEmpty()) {
+            return Optional.empty();
         }
 
-        public Plugin getPlugin() {
-            return this.plugin;
+        Map<Integer, List<ProfitCalculator>> grouped = calculators.stream()
+                .collect(Collectors.groupingBy(ProfitCalculator::getWeight));
+
+        int lowestWeight = grouped.keySet().stream()
+                .min(Integer::compareTo)
+                .orElse(0);
+
+        List<ProfitCalculator> candidates = grouped.get(lowestWeight);
+        if (candidates == null || candidates.isEmpty()) {
+            return Optional.empty();
         }
 
-        /**
-         * Gets the ProfitCalculator instance associated with the current instance.
-         *
-         * @return The ProfitCalculator instance associated with the current instance.
-         */
-        public ProfitCalculator getCalculator() {
-            return this.calculator;
-        }
+        return candidates.stream()
+                .map(calculator -> calculator.getProfit(voidChest, input, itemAmount))
+                .filter(profit -> profit != null && profit.compareTo(BigDecimal.ZERO) > 0)
+                .max(BigDecimal::compareTo);
+    }
 
-        /**
-         * Gets the priority of the current instance.
-         *
-         * @return The priority value of the current instance. The interpretation of this value is context-dependent.
-         */
-        public int getPriority() {
-            return this.priority;
-        }
+    private static List<ProfitCalculator> getOrCreateCalculatorList(String voidchestType) {
+        return calculatorMap.computeIfAbsent(voidchestType, k -> new ArrayList<>());
+    }
 
-        /**
-         * Sets the priority of the current instance.
-         * <p>
-         * This method is intended for internal use and should not be called directly from external code.
-         *
-         * @param priority The priority value to be set. The interpretation of this value is context-dependent.
-         */
-        @ApiStatus.Internal
-        public void setPriority(int priority) {
-            this.priority = priority;
+    private static void validateCalculator(String voidchestType, ProfitCalculator calculator) {
+        if (isCalculatorRegistered(voidchestType, calculator)) {
+            throw new IllegalArgumentException("Calculator " + calculator.getClass().getSimpleName() + " is already registered to " + voidchestType);
         }
     }
 }
